--- a/ConsoleApplication2/ConsoleApplication2.vcxproj.filters
+++ b/ConsoleApplication2/ConsoleApplication2.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClCompile Include="quick_sort.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="merge_sort.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
