--- a/ConsoleApplication2/ConsoleApplication2.vcxproj.filters
+++ b/ConsoleApplication2/ConsoleApplication2.vcxproj.filters
@@ -35,9 +35,6 @@
     <ClCompile Include="insert_sort.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="shell_insert_sort.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="utility.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -54,6 +51,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="dijkstra.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="floyd.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
